<resources>
    <string name="app_name">Material Design Lessons</string>
    <string name="name">Name</string>
    <string name="names_rule">Not more then 10 characters</string>
    <string name="snackbar">Snackbar</string>
    <string name="bottom_sheet_head">The head of a bottom seet</string>
    <string name="ok">Ok</string>
    <string name="bottom_sheet_body">The body of a bottom sheet</string>
    <string name="show_bottom_sheet">Show bottom sheet</string>
    <string name="text">Text</string>
    <string name="bordered_text">Bordered</string>
    <string name="bordered">Bordered</string>
    <string name="raised">Raised</string>
    <string name="person">Person</string>
    <string name="walk">Walk</string>
    <string name="bike">Bike</string>
    <string name="motorcycle">Motorbike</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="plan">Airplan</string>
    <string name="boat">Boat</string>
    <string name="phone">Phone</string>
    <string name="letter">Letter</string>
    <string name="communication">Communication</string>
    <string name="transport">Transport</string>
    <string name="navigation">Navigation</string>
    <string name="email">email@gmail.com</string>
    <string name="image">Image</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="begin">Begin</string>
    <string name="finish">Finish</string>
    <string name="line">Line</string>
    <string name="circle">Circle</string>
    <string name="collapsing_text">И какой же русский не любит быстрой езды? Его ли душе, стремящейся закружиться, загуляться, сказать иногда: «черт побери все!» – его ли душе не любить ее? Ее ли не любить, когда в ней слышится что-то восторженно-чудное? Кажись, неведомая сила подхватила тебя на крыло к себе, и сам летишь, и все летит: летят версты, летят навстречу купцы на облучках своих кибиток, летит с обеих сторон лес с темными строями елей и сосен, с топорным стуком и вороньим криком, летит вся дорога невесть куда в пропадающую даль, и что-то страшное заключено в сем быстром мельканье, где не успевает означиться пропадающий предмет, – только небо над головою, да легкие тучи, да продирающийся месяц одни кажутся недвижны. Эх, тройка! птица тройка, кто тебя выдумал? знать, у бойкого народа ты могла только родиться, в той земле, что не любит шутить, а ровнем-гладнем разметнулась на полсвета, да и ступай считать версты, пока не зарябит тебе в очи. И не хитрый, кажись, дорожный снаряд, не железным схвачен винтом, а наскоро живьем с одним топором да долотом снарядил и собрал тебя ярославский расторопный мужик. Не в немецких ботфортах ямщик: борода да рукавицы, и сидит черт знает на чем; а привстал, да замахнулся, да затянул песню – кони вихрем, спицы в колесах смешались в один гладкий круг, только дрогнула дорога, да вскрикнул в испуге остановившийся пешеход – и вон она понеслась, понеслась, понеслась!.. И вон уже видно вдали, как что-то пылит и сверлит воздух.  Не так ли и ты, Русь, что бойкая необгонимая тройка несешься? Дымом дымится под тобою дорога, гремят мосты, все отстает и остается позади. Остановился пораженный божьим чудом созерцатель: не молния ли это, сброшенная с неба? что значит это наводящее ужас движение? и что за неведомая сила заключена в сих неведомых светом конях? Эх, кони, кони, что за кони! Вихри ли сидят в ваших гривах? Чуткое ли ухо горит во всякой вашей жилке? Заслышали с вышины знакомую песню, дружно и разом напрягли медные груди и, почти не тронув копытами земли, превратились в одни вытянутые линии, летящие по воздуху, и мчится вся вдохновенная Богом!.. Русь, куда ж несешься ты? дай ответ. Не дает ответа. Чудным звоном заливается колокольчик; гремит и становится ветром разорванный в куски воздух; летит мимо все, что ни есть на земли, и, косясь, постораниваются и дают ей дорогу другие народы и государства...\"</string>
    <string name="gogol">Гоголь</string>
    <string name="picture">Picture</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="brown">Brown</string>
    <string name="yellow">Yellow</string>
</resources>
