<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonRectStyle"
        android:text="@string/bike"
        app:icon="@drawable/ic_directions_bike_black_24dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonRectStyle"
        android:text="@string/motorcycle"
        app:icon="@drawable/ic_motorcycle_black_24dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonStyle"
        android:text="@string/car"
        app:icon="@drawable/ic_directions_car_black_24dp"
        app:iconTint="@android:color/holo_red_dark" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonStyle"
        android:text="@string/bus"
        app:icon="@drawable/ic_directions_bus_black_24dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonStyle"
        android:text="@string/train"
        app:icon="@drawable/ic_directions_transit_black_24dp" />

</LinearLayout>