<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/begin"
            android:id="@+id/btn_circle_begin"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
           style="?attr/materialButtonOutlinedStyle"
            android:text="@string/finish"
            android:id="@+id/btn_circle_finish"/>
    </LinearLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prb_circle"
        android:indeterminate="true"
        android:visibility="invisible" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/begin"
            android:id="@+id/btn_line_start"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/finish"
            android:id="@+id/btn_line_stop"/>
    </LinearLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prb_line"
        android:indeterminate="false"
        android:indeterminateTint="@color/colorPrimaryDark"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="invisible" />
</LinearLayout>