<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_flat"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_bordered"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bordered" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_raised"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raised"
            app:icon="@drawable/ic_add_black_24dp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tgr_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_add_black_24dp"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_remove_black_24dp"
                app:iconGravity="textStart" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_add_black_24dp"
        app:tint="@android:color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>